<resources>
    <string name="app_name">My Home Care</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="otherLogin">Or login with social account</string>
    <string name="signUp">Sign up</string>
    <string name="name">Name</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="otherSignUp">Or sign up with social account</string>
    <string name="forgotPass">Forgot password</string>
    <string name="forgotEmailEnter">Please, enter your email address. You will recieve a link to create a new password via email.</string>
    <string name="wrongEmail">Not a valid email address. Should be your@email.com</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="brand">Brand</string>
    <string name="apply">Apply</string>
    <string name="discard">Discard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="filters">Filters</string>
    <string name="price">Price: lowest to high</string>
    <string name="raingNumber">"(3)"</string>
    <string name="brandName">Mango</string>
    <string name="color">Color:</string>
    <string name="orange">Orange</string>
    <string name="size">Size:</string>
    <string name="sizeLarge">L</string>
    <string name="priceNUmber">55$</string>
    <string name="offerPrice">12$</string>
    <string name="sortBy">Sort by</string>
    <string name="popular">Popular</string>
    <string name="newest">Newest</string>
    <string name="customerrevew">Customer Review</string>
    <string name="pricelowtohigh">Price : lowest to high</string>
    <string name="pricehightolow">Price : highest to low</string>
    <string name="HelloJohn">Hello John</string>
    <string name="topcategoryforyou">Top Categories For You</string>
    <string name="bestSerives">Best Services</string>
    <string name="streetClothes">Street clothes</string>
    <string name="newword">New</string>
    <string name="neverseen">You\'ve never seen it before!</string>
    <string name="viewall">View all</string>
    <string name="fashion">Fashion</string>
    <string name="sale">sale</string>
    <string name="check">Check</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="Profile">Profile</string>
    <string name="saleCapital">Sale</string>
    <string name="summersale">Super summer sale</string>
    <string name="myProfile">My profile</string>
    <string name="myOrder">My orders</string>
    <string name="shippingAddress">Shipping addresses</string>
    <string name="paymentsMethod">Payment methods</string>
    <string name="promocodes">Promocodes</string>
    <string name="myreviews">My reviews</string>
    <string name="settings">Settings</string>
    <string name="personalInformation">Personal Information</string>
    <string name="fullname">Full name</string>
    <string name="dob">Date of Birth</string>
    <string name="change">Change</string>
    <string name="summersalecap">SUMMER SALES</string>
    <string name="uptooff">Up to 50% off</string>
    <string name="clothes">Clothes</string>
    <string name="shoes">Shoes</string>
    <string name="accesories">Accessories</string>
    <string name="womenstops">Women\'s tops</string>
    <string name="passwordChange">Password Change</string>
    <string name="oldPassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="repeatnewpassword">Repeat New Password</string>
    <string name="savePassword">Save Password</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="productName">Lower</string>
    <string name="pricetext">Price</string>
    <string name="selectVendor">Select Vendor</string>
    <string name="vendorNumber">(5)</string>
    <string name="offerPriceText">Offer Price</string>
    <string name="selectSize">Select Size</string>
    <string name="addToCartAdd">Add to cart</string>
    <string name="startingFrom">Starting From</string>
    <string name="selectBrand">Select Brand</string>
    <string name="soltOut">Sorry, this item is currently sold out</string>
    <string name="checkOut">Check Out</string>
    <string name="leaveFeedBack">Leave feedback</string>
    <string name="reorder">Reorder</string>
    <string name="reviews">8 reviews</string>
    <string name="cabtaxi"><![CDATA[Cab & Taxi]]></string>
    <string name="writereviews">Write a review</string>
</resources>