<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_shop"
        android:enabled="true"
        android:icon="@drawable/shop_icon"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_bag"
        android:enabled="true"
        android:icon="@drawable/bag_icon"
        android:title="@string/bag" />

    <item
        android:id="@+id/navigation_favorite"
        android:enabled="true"
        android:icon="@drawable/favorite_icon"
        android:title="@string/favorites" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/user_icon"
        android:title="@string/Profile" />
</menu>