<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sortby_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/colorGrey"
            app:cardCornerRadius="4dp"></androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/sortBy"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"></TextView>

        <TextView
            android:id="@+id/tv_sortby_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_light"
            android:padding="10dp"
            android:text="@string/popular"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"></TextView>

        <TextView
            android:id="@+id/tv_sortby_newest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_light"
            android:padding="10dp"
            android:text="@string/newest"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"></TextView>

        <TextView
            android:id="@+id/tv_sortby_cr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_light"
            android:padding="10dp"
            android:text="@string/customerrevew"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"></TextView>

        <TextView
            android:id="@+id/tv_sortby_lth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_light"
            android:padding="10dp"
            android:text="@string/pricelowtohigh"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"></TextView>

        <TextView
            android:id="@+id/tv_sortby_htl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_light"
            android:padding="10dp"
            android:text="@string/pricehightolow"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"></TextView>

    </LinearLayout>
</LinearLayout>