<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.MainFashionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="480dp">

            <ImageView
                android:id="@+id/iv_shopping_large_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/b"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/iv_shopping_large_image">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fashion"
                    android:fontFamily="@font/gilroy_bold"
                    android:textColor="@color/colorWhite"
                    android:textSize="50dp"
                    android:textStyle="bold"></TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale"
                    android:textColor="@color/colorWhite"
                    android:textSize="50dp"
                    android:fontFamily="@font/gilroy_bold"
                    android:textStyle="bold"></TextView>


                <TextView
                    android:id="@+id/tv_shopping_check_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/apply_check"
                    android:gravity="center"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="@string/check"
                    android:textColor="@color/colorWhite"></TextView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/newword"
                    android:textColor="@color/lightBlack"
                    android:textSize="32sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_light"
                    android:text="@string/neverseen"
                    android:textColor="@color/colorGrey"></TextView>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_fashion2_sale_viewall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/viewall"
                android:fontFamily="@font/gilroy_semibold"
                android:textColor="@color/lightBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main_fashion_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20dp"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</ScrollView>