<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="10dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favoriteConstrLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardCornerRadius="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iv_favorites_items_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/demo"></ImageView>
        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_favorite_offer_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/favoriteConstrLayout"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="-20%"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/offer_back"
        app:layout_constraintLeft_toLeftOf="@id/favoriteConstrLayout"></TextView>

    <TextView
        android:id="@+id/tv_favorite_new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/favoriteConstrLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="NEW"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/newitem_back"
        app:layout_constraintLeft_toLeftOf="@id/favoriteConstrLayout"></TextView>


    <TextView
        android:id="@+id/tv_favorite1_sold_out_item"
        android:layout_width="0dp"
        android:visibility="gone"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/lightBlack"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/favoriteConstrLayout"
        app:layout_constraintRight_toRightOf="@id/favoriteConstrLayout"
        app:layout_constraintBottom_toBottomOf="@id/favoriteConstrLayout"
        android:text="@string/soltOut"></TextView>
    <ImageView
        android:id="@+id/favorite_cart_bag"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/favoriteConstrLayout"
        app:layout_constraintEnd_toEndOf="@+id/favoriteConstrLayout"
        app:layout_constraintTop_toBottomOf="@+id/favoriteConstrLayout"
        app:srcCompat="@drawable/cart_bucket" />

    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteConstrLayout">


        <RatingBar
            android:id="@+id/favorite_rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:rating="3"
            android:isIndicator="true"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="187dp"></RatingBar>

        <TextView
            android:id="@+id/favorite_rating_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/gilroy_light"
            android:gravity="center"
            android:text="@string/raingNumber"></TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llproductLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/llayout">

        <TextView
            android:id="@+id/tv_favorites_brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brandName"
            android:fontFamily="@font/gilroy_semibold"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/tv_favorites_brand_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brandName"
            android:fontFamily="@font/gilroy_semibold"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/color"
                android:fontFamily="@font/gilroy_light"
                android:textSize="12dp"></TextView>

            <TextView
                android:id="@+id/tv_favorites_brand_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/orange"
                android:fontFamily="@font/gilroy_light"
                android:textColor="@color/colorBlack"
                android:textSize="12dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="2dp"
                android:text="@string/size"
                android:fontFamily="@font/gilroy_light"
                android:textSize="12dp"></TextView>

            <TextView
                android:id="@+id/tv_favorites_brand_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/sizeLarge"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/gilroy_light"
                android:textSize="12dp"></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_favorites_list_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/gilroy_light"
                android:text="@string/priceNUmber"
                android:textSize="12dp"></TextView>

            <TextView
                android:id="@+id/tv_favorites_list_offer_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/offerPrice"
                android:fontFamily="@font/gilroy_light"
                android:textColor="@color/colorRed"
                android:textSize="12dp"></TextView>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>