<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet_container"
    android:background="@drawable/sortby_back"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/gilroy_semibold"
        android:layout_marginEnd="12dp"
        android:text="@string/passwordChange"
        android:textAlignment="center"
        android:textColor="@color/lightBlack"
        android:textSize="18sp"
        android:textStyle="bold"></TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/colorWhite">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/oldPassword"
            android:padding="5dp"
            app:hintTextColor="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_old_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="textPassword"
                android:paddingTop="4dp"
                android:fontFamily="@font/gilroy_light"
                android:singleLine="true"
                android:textSize="16sp"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/newpassword"
            android:padding="5dp"

            app:hintTextColor="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="textPassword"
                android:fontFamily="@font/gilroy_light"
                android:paddingTop="4dp"
                android:singleLine="true"
                android:textSize="16sp"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:fontFamily="@font/gilroy_light"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/colorGrey"
        android:text="@string/forgotPwd"></TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorWhite">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/repeatnewpassword"
            android:padding="5dp"
            app:hintTextColor="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="textPassword"
                android:fontFamily="@font/gilroy_light"
                android:paddingTop="4dp"
                android:singleLine="true"
                android:textSize="16sp"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/apply_back"
        android:layout_marginBottom="20dp"
        android:padding="12dp"
        android:text="@string/savePassword"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:fontFamily="@font/gilroy_semibold"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textColor="@color/colorWhite"></TextView>


</LinearLayout>