<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_forgot_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_chevron_left_24"></ImageView>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/forgotPass"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorBlack"
        android:textSize="35sp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/forgotEmailEnter"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/gilroy_light"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        ></TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:id="@+id/ll_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_forgot_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="4.5"
                android:hint="@string/email"
                android:padding="5dp"
                app:hintTextColor="@color/colorGrey">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:baselineAligned="false"
                    android:paddingTop="4dp"
                    android:fontFamily="@font/gilroy_light"
                    android:singleLine="true"
                    android:textSize="16sp"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/iv_forgot_clear"
                android:layout_width="0dp"
                android:visibility="invisible"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:src="@drawable/ic_close_24"></ImageView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_not_valid_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        android:text="@string/wrongEmail"
        android:textSize="12sp"
        android:textColor="@color/colorRed"
        android:textAlignment="center"></TextView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_forgot_email_send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorRed"
        app:cardBackgroundColor="@color/colorRed"
        app:cardCornerRadius="22dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/gilroy_semibold"
            android:padding="12dp"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"></TextView>
    </androidx.cardview.widget.CardView>


</LinearLayout>